--- a/gen/src/assets/styles.css
+++ b/gen/src/assets/styles.css
@@ -8,6 +8,10 @@ h3 {
   @apply text-lg;
 }
 body {
-  @apply bg-purple-900;
-  @apply text-green-100;
+  @apply text-green-200;
+  /* text-shadow: 0px 1px 8px rgba(0, 0, 0, 0.8); */
+  background: linear-gradient(20deg, theme("colors.green.800") 0, theme("colors.teal.700") 110em);
+}
+h1, h2, h3, h4, h5, p {
+  text-shadow: 0px 1px 8px rgba(0, 0, 0, 0.8);
 }
